# AshamaneCore-Legion-7.3.5

./: CMakeLists.txt
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake  FindOpenSSL.cmake
contrib/protoc-bnet/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/cotire/CMake/: cotire.cmake
dep/cpr/: CMakeLists.txt
dep/cpr/opt/curl/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
src/common/Asio/: AsioHacksFwd.h  IoContext.h
src/common/Cryptography/: ARC4.cpp  ARC4.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h
src/server/database/Database/: DatabaseEnvFwd.h
src/server/database/Database/Implementation/: CharacterDatabase.cpp  WorldDatabase.cpp
src/server/database/PrecompiledHeaders/: databasePCH.h
src/server/game/Entities/Player/: CollectionMgr.cpp
src/server/game/Globals/: ObjectMgr.cpp
src/server/game/Guilds/: GuildMgr.cpp
src/server/game/Handlers/: HotfixHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.cpp
src/server/game/Server/: WorldSession.cpp  WorldSocket.cpp
src/server/scripts/Commands/: cs_server.cpp
src/server/scripts/Custom/: custom_script_loader.cpp  npc_adventurer_bot.cpp  npc_ambient_ai.cpp  npc_ambient_ai.h  npc_ambient_companion.cpp  npc_ambient_data.cpp  npc_ambient_instance.cpp  npc_ambient_pvp.cpp  npc_ambient_spawn.cpp  npc_ambient_world.cpp  npc_ambient_world.h  npc_class_bot.cpp
src/server/worldserver/PrecompiledHeaders/: worldPCH.h
src/server/worldserver/TCRest/: server_http.h
src/tools/map_extractor/: System.cpp
src/tools/vmap4_extractor/: vmapexport.cpp
